<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tvLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvContador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="0"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="124dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:text="Iniciar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvContador" />

        <Button
            android:id="@+id/btnPausar"
            android:layout_width="124dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:text="Pausar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnIniciar" />

        <Button
            android:id="@+id/btnResetar"
            android:layout_width="124dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:text="Resetar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPausar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
